# Vara-Integration-Kit-ETH-2024-

./: 2  README.md
Contracts/AsynchronousContractTemplate/: README.md
Contracts/AsynchronousContractTemplate/io/src/: lib.rs
Contracts/AsynchronousContractTemplate/src/: lib.rs
Contracts/Example-Semaforo-Tutorial/Semaforo-Components/: GreenButton.tsx  ReadState.tsx  RedButton.tsx  YellowButton.tsx
Contracts/Example-Semaforo-Tutorial/Semaforo-Contract/: .binpath  Cargo.toml  README.md  build.rs
Contracts/Example-Semaforo-Tutorial/Semaforo-Contract/io/: Cargo.toml
Contracts/Example-Semaforo-Tutorial/Semaforo-Contract/io/src/: lib.rs
Contracts/Example-Semaforo-Tutorial/Semaforo-Contract/src/: lib.rs
Contracts/Example-Semaforo-Tutorial/Semaforo-Contract/state/: Cargo.toml
Contracts/Example-Semaforo-Tutorial/Semaforo-Contract/state/src/: lib.rs
Contracts/Example-Semaforo-Tutorial/Semaforo-Contract/tests/: tests.rs
Frontend/: 2  package.json  tailwind.config.js
Frontend/public/: index.html
Frontend/src/: App.css  App.tsx  consts.ts
Frontend/src/chat/: StuddyBuddy.tsx  chat.ts  openAIClient.ts  text2speech.ts
Frontend/src/chat_components/: openai-test.ts  openai-test2.ts  openai-test3.ts
Frontend/src/components/: index.ts
Frontend/src/pages/: index.tsx
~/.vim/undodir/: %Users%arturoguevara%Coding%5Mayo%5MayHack%Frontend%public%index.html  %Users%arturoguevara%Coding%5Mayo%5MayHack%Frontend%src%App.tsx  %Users%arturoguevara%Coding%5Mayo%5MayHack%Frontend%src%components%index.ts  %Users%arturoguevara%Coding%5Mayo%5MayHack%Frontend%src%components%layout%header%Header.tsx  %Users%arturoguevara%Coding%5Mayo%5MayHack%Frontend%src%components%layout%header%account%Account.tsx  %Users%arturoguevara%Coding%5Mayo%5MayHack%Frontend%src%components%layout%header%account%wallet%Wallet.tsx  (+3 more)
(+41 files in other folders)
